fix z-index and position of background image in WhyTrade module

--- a/src/modules/WhyTrade/WhyTrade.scss
+++ b/src/modules/WhyTrade/WhyTrade.scss
@@ -39,7 +39,7 @@
 
   &__bg-img-wrapper {
     position: absolute;
-    z-index: -1;
+    z-index: -2; // to be behind the gradient
 
     &--number-dark {
       top: 90px;
@@ -62,6 +62,7 @@
         scale: 2;
       }
       &--vector {
+        top: 0;
         bottom: 500px;
         right: 250px;
         scale: 3;
